--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -5,12 +5,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="A forum to get assignments and see your current grades">
         <meta name="author" content="Justin Nietzer">
-        <title>Music Notes login</title>
+        <title></title>
     </head>
 
 <body>
-        <p>Screen for Login or create an account</p>
-
+        <p>Screen for main dashboard to access grades and assignments</p>
 
 
 
@@ -18,9 +17,12 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
         <script type="text/javascript" src="index.js"></script>
 
+
 </body>
 
 
 
 
 </html>
+
+
