--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     </head>
 
 <body>
-        <p>Screen for Login or create an account</p>
+        <p>Screen for Login or create an account. PLEASE</p>
 
 
 
